# simulation_utils

./: .gitignore  LICENSE  README.md
battery_consumer/: CMakeLists.txt  package.xml
battery_consumer/include/battery_consumer/: BatteryConsumer.hpp
battery_consumer/src/: BatteryConsumer.cpp
common_object_scanner/: CMakeLists.txt  package.xml
common_object_scanner/gz_msgs/: CMakeLists.txt  iai_scan_msgs.proto  iai_scan_ping.proto  iai_scan_pong.proto
common_object_scanner/include/common_object_scanner/: ObjectScanner.hpp  ObjectTransmitter.hpp  ScanCommon.hpp
common_object_scanner/src/: ObjectScanner.cpp  ObjectTransmitter.cpp
common_object_scanner/world/: test.world
docking_plugin/: CMakeLists.txt  package.xml
docking_plugin/include/docking_plugin/: iai_box_docking.h
docking_plugin/launch/: start_mission_modules.launch
docking_plugin/scripts/: hardcoded_mission
docking_plugin/src/: iai_box_docking.cpp
gazebo_mission_control/: CMakeLists.txt  package.xml
gazebo_mission_control/gz_msgs/: change_animation_state.proto
gazebo_mission_control/include/gazebo_mission_control/: OperatorDefs.hpp  OperatorModel.hpp  OperatorOverlay.hpp  OperatorVisualization.hpp
gazebo_mission_control/launch/: spawn_operator.launch  start_test_world.launch
gazebo_mission_control/models/sherpa_operator/: model.config  operator.urdf
gazebo_mission_control/models/sherpa_operator/meshes/: capsule.dae  capsule.stl
gazebo_mission_control/src/: OperatorModel.cpp  OperatorOverlay.cpp  OperatorVisualization.cpp
gazebo_mission_control/worlds/: operator.world
gz_tf/: CMakeLists.txt  package.xml
gz_tf/scripts/: gz2Tf.py
sim_model_gen/scripts/: create_gz_urdf.py
sim_utils_msgs/: CMakeLists.txt  package.xml
sim_utils_msgs/action/: RechargeBattery.action
sim_utils_msgs/msg/: IAI_Robot.msg  ObjectDetection.msg
sim_utils_msgs/srv/: AddBatteryConsumer.srv  RemoveBatteryConsumer.srv
simulation_utils/: CMakeLists.txt  package.xml
