<?xml version="1.0"?>
<package>
  <name>common_object_scanner</name>
  <version>0.0.0</version>
  <description>The common_object_scanner package offers an interface for distance based detection of objects. Detections are published as Designators(see designator_integration_msgs). The plugins allow specification of the object in URDF/SDF.</description>
  <maintainer email="bbrieber@cs.uni-bremen.de">Benjamin Brieber</maintainer>
  <author email="bbrieber@cs.uni-bremen.de">Benjamin Brieber</author>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>iai_gazebo_msgs</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>iai_gazebo_msgs</run_depend>


  <export>
    <gazebo_ros 
                plugin_path="${prefix}/lib" 
                gazebo_plugin_path="${prefix}/lib" 
                gazebo_media_path="${prefix}/resource" 
                gazebo_resource_path="${prefix}:${prefix}/resource" 
                gazebo_model_path="${prefix}/resource/models" />
  </export>
</package>