<?xml version="1.0"?>
<package>
  <name>docking_plugin</name>
  <version>0.0.0</version>
  <description>The docking_plugin package</description>

  <maintainer email="bbrieber@cs.uni-bremen.de">Benjmian Brieber</maintainer>
  <author email="bbrieber@cs.uni-bremen.de">Benjmian Brieber</author>

  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>iai_rescue_robots</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>iai_rescue_robots</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>