<?xml version="1.0"?>
<package>
  <name>sim_utils_msgs</name>
  <version>0.0.0</version>
  <description>The sim_utils_msgs package conatins messages for the communication with other modules within the iai_gazebo_* family</description>
  
  <maintainer email="bbrieber@cs.uni-bremen.de">Benjamin Brieber</maintainer>
  <author email="bbrieber@cs.uni-bremen.de">Benjamin Brieber</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>