<?xml version="1.0"?>
<package>
  <name>simulation_utils</name>
  <version>0.1.0</version>
  <description>This package contains various tools that should help controlling gazebo simulations from ROS and build robots and worlds within this this context.
    </description>
  <maintainer email="bbrieber@cs.uni-bremen.de">Benjmian Brieber</maintainer>
  <author email="bbrieber@cs.uni-bremen.de">Benjmian Brieber</author>

  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!--
  <run_depend>iai_rescue_human_operator</run_depend>
  -->
  <export>
    <!--
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}/.." gazebo_resource_path="${prefix}/..:${prefix}/resource" gazebo_model_path="${prefix}/.."/>
    -->
  </export>
</package>